k8s-manifests/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: order-service
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: order-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: order-service
        app: order-service
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: postgresql://user:jeusf23aco3oa9a9a0@db-data:5432/orderdb
            - name: GRPC_HOST
              value: source-service
            - name: GRPC_PORT
              value: "50051"
            - name: KAFKA_BROKER
              value: kafka:9092
          image: hsecapetown/hse-2024-sd-hw1-order-service:latest
          name: order-service
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
