k8s-manifests/outbox-processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: outbox-processor
  name: outbox-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: outbox-processor
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: outbox-processor
        app: outbox-processor
    spec:
      containers:
        - env:
            - name: MOCK_SERVER_HOST
              value: mock-sources-server
            - name: MOCK_SERVER_PORT
              value: "3629"
          image: hsecapetown/hse-2024-sd-hw1-outbox-processor:latest
          name: outbox-processor
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
