k8s-manifests/source-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: source-service
  name: source-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: source-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: source-service
        app: source-service
    spec:
      containers:
        - env:
            - name: GRPC_PORT
              value: "50051"
            - name: KAFKA_BROKER
              value: kafka:9092
            - name: MOCK_SERVER_HOST
              value: mock-sources-server
            - name: MOCK_SERVER_PORT
              value: "3629"
            - name: REDIS_HOST
              value: redis-cache
          image: hsecapetown/hse-2024-sd-hw1-source-service:latest
          name: source-service
          ports:
            - containerPort: 50051
              protocol: TCP
      restartPolicy: Always
