k8s-manifests/mock-sources-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: mock-sources-server
  name: mock-sources-server
spec:
  ports:
    - name: "3629"
      port: 3629
      targetPort: 3629
  selector:
    io.kompose.service: mock-sources-server
