k8s-manifests/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: order-service
    app: order-service
  name: order-service
spec:
  ports:
    - protocol: TCP
      port: 8079
      targetPort: 8000
  selector:
    app: order-service
  type: ClusterIP
