k8s-manifests/outbox-processor-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: outbox-processor
  name: outbox-processor
spec:
  selector:
    app: outbox-processor
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
