k8s-manifests/source-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: source-service
  name: source-service
spec:
  selector:
    app: source-service
  ports:
    - port: 80
      targetPort: 50051
  type: ClusterIP
